--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -4,7 +4,7 @@
     padding:  3rem 1rem 0 1rem;
     height: 10rem;
     text-align: center;
-    color: #00445C;
+    color: white;
 }
 
 .footer p {
