--- a/src/components/page/abas/tickectList/TicketList.css
+++ b/src/components/page/abas/tickectList/TicketList.css
@@ -1,3 +1,37 @@
 .ticketList{
     flex: 4;
 }
+
+
+.containerTicketList {
+    flex: 4;
+    padding: 5px;
+}
+
+.ticketListUser {
+    display: flex;
+    align-items: center;
+}
+
+.ticketListImg {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+.ticketListShow {
+    border: none;
+    border-radius: 10px;
+    padding: 5px 10px;
+    background-color: #3bb077;
+    color: white;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+.ticketListDelete {
+    color: red;
+    cursor: pointer;
+}
