--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,9 +1,11 @@
 .sidebar{
     flex: 1;
     height: 100vh;
-    background-color: rgb(247, 247, 247);
+    /* background-color: rgb(247, 247, 247); */
     position: sticky;
     border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px -10px rgba(0,0,0,0.75);
 }
 
 .sidebarWrapper{
@@ -22,11 +24,11 @@
 
 .sidebarList{
     list-style: none;
-    padding: 5px;
+    padding: 20px 5px 5px 5px;
 }
 
 .sidebarListItem{
-    padding: 5px;
+    padding: 10px 5px 10px 5px;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -35,6 +37,6 @@
 
 .sidebarListItem.active,
 .sidebarListItem:hover{
-    background-color: rgb(228, 228, 250);
+    background-color: rgb(243, 243, 250);
 }
 
