--- a/src/components/page/abas/ticketCreate/TicketCreate.css
+++ b/src/components/page/abas/ticketCreate/TicketCreate.css
@@ -40,20 +40,33 @@
       font-size: 18px;
       color: #555;
   }
-  
+    
+
   .createTicketSelect{
-      height: 40px;
-      border-radius: 5px;
+    border: 1px solid #eee;
+    display: block;
+    width: 100%;
+    font-size: 1rem;
+    padding: 0.8rem;
+    border-radius: 0.4rem;
+    background: #eee;
+    transition: 0.2s;
+    margin-top: 7.9px;
+}
+
+.createTicketSelect:focus,
+  .createTicketSelect:hover {
+    outline: none;
+    border-color: #098583;
+    background: white;
+    box-shadow: 0 0 0 3px #78b3b2;
   }
-  
-  .createTicketButton{
-      width: 200px;
-      border: none;
-      background-color: darkblue;
-      color: white;
-      padding: 7px 10px;
-      font-weight: 600;
-      border-radius: 10px;
-      margin-top: 30px;
-      cursor: pointer;
+
+
+  .createTicketItemButton {
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    margin-right: 20px;
   }
