--- a/src/components/page/abas/tickectList/Ticket.css
+++ b/src/components/page/abas/tickectList/Ticket.css
@@ -128,11 +128,22 @@
     font-size: 16px !important;
 }
 
-.ticketShowInfoTitle{
+.ticketShowIconDetails{
+    font-size: 16px !important;
     margin-left: 10px;
-    color: #4444;
 }
 
+.ticketShowInfoTitle{
+    margin-left: 10px;
+    color: #000000ad;
+    font-weight: 600;
+}
+
+.ticketShowInfoSubTitle{
+    margin-left: 10px;
+    color: #4444;
+    font-weight: 600;
+}
 
 .ticketUpdateImg{
     width: 200px;
